--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,8 @@ if (flutterVersionName == null) {
 
 android {
     namespace "com.example.dompetku_application"
-    compileSdkVersion flutter.compileSdkVersion
+    compileSdkVersion 34  // Ubah di sini jadi 34
+  
     ndkVersion flutter.ndkVersion
 
     compileOptions {
@@ -46,7 +47,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34  // Ubah di sini jadi 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
