--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,19 @@
 name: dompetku_application
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.1 <4.0.0'
+  sdk: ">=3.1.1 <4.0.0"
 
 dependencies:
+  fl_chart: ^0.55.1
   flutter:
     sdk: flutter
+
+  google_fonts: ^4.0.0
+  lucide_icons: ^0.257.0
+  pie_chart: ^5.4.0
 
 dev_dependencies:
   flutter_test:
