--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,11 @@ dependencies:
   fl_chart: ^0.55.1
   flutter:
     sdk: flutter
-
   google_fonts: ^4.0.0
   lucide_icons: ^0.257.0
   pie_chart: ^5.4.0
+  flutter_svg: ^2.0.9 # Tambahan untuk mendukung SVG
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +23,6 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/ # Folder untuk gambar, termasuk SVG
