--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/DompetKu.png"
 
 flutter:
   uses-material-design: true
