--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   pie_chart: ^5.4.0
   flutter_svg: ^2.0.9 # Tambahan untuk mendukung SVG
   intl: ^0.19.0
+  sqflite: ^2.3.2
 
 dev_dependencies:
   flutter_test:
